<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    style="@style/BackgroundColorMainActivity">

    <FrameLayout
        android:id="@+id/panel_header"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingTop="14dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/text_panel_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/workplace"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="28dp">

        <Button
            android:id="@+id/button_search"
            style="@style/ButtonMainActivity"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/button_media"
            style="@style/ButtonMainActivity"
            android:text="@string/media"
            app:icon="@drawable/music" />

        <Button
            android:id="@+id/button_settings"
            style="@style/ButtonMainActivity"
            android:text="@string/settings"
            app:icon="@drawable/settings" />
    </LinearLayout>


</LinearLayout>