<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back"
            style="@style/Toolbar"
            android:foreground="?attr/selectableItemBackground"
            android:paddingStart="12dp"
            android:paddingTop="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp"
            android:src="@drawable/arrow" />

        <TextView
            style="@style/TextViewSettingsActivity"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:text="@string/settings"
            android:textSize="@dimen/text_size"
            android:textFontWeight="500"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="21dp"
            android:paddingEnd="6dp"
            android:paddingBottom="21dp">

            <TextView
                style="@style/TextViewSettingsActivity"
                android:text="@string/dark_theme" />

            <Switch
                style="@style/SizeViewSettingsActivity"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="21dp"
            android:paddingEnd="12dp"
            android:paddingBottom="21dp">

            <TextView
                style="@style/TextViewSettingsActivity"
                android:text="@string/share_app" />

            <ImageView
                style="@style/IconSettingsActivity"
                android:src="@drawable/share" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="21dp"
            android:paddingEnd="12dp"
            android:paddingBottom="21dp">

            <TextView
                style="@style/TextViewSettingsActivity"
                android:text="@string/write_to_support" />

            <ImageView
                style="@style/IconSettingsActivity"
                android:src="@drawable/support" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="21dp"
            android:paddingEnd="12dp"
            android:paddingBottom="21dp">

            <TextView
                style="@style/TextViewSettingsActivity"
                android:text="@string/user_agreement" />

            <ImageView
                style="@style/IconSettingsActivity"
                android:src="@drawable/arrow_right"/>
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
